--- a/prelim.tex
+++ b/prelim.tex
@@ -70,6 +70,13 @@
 
 \usepackage{hyperref}
 
+%\setlength\fboxsep{5cm}
+
+\ifdefined\knitrout
+  \renewenvironment{knitrout}{\begin{small}}{\end{small}}
+\else
+\fi
+
 \usepackage{xcolor}
 \hypersetup{
     colorlinks,
@@ -88,7 +95,11 @@ frame = single,
 language=Pascal, 
 framexleftmargin=25pt,
 breaklines=true,
-basicstyle=\footnotesize\ttfamily}
+basicstyle=\footnotesize\ttfamily,
+commentstyle=\textsl,
+keywordstyle=\mdseries,
+showstringspaces=false,
+index=[1][keywords]}
 
 \usepackage{nicefrac}
 \usepackage{stmaryrd}
@@ -655,7 +666,7 @@ their methods
 \end{figure}
 
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Wed Nov 23 13:29:09 2016
+% Wed Nov 23 17:21:06 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllllll}
@@ -693,7 +704,7 @@ Percentile & Our Algorithm & DSA & Least Squares & Quad. Prog. & ssKL & ssFroben
 \end{figure}
 
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Wed Nov 23 13:29:10 2016
+% Wed Nov 23 17:21:07 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllllll}
@@ -731,20 +742,32 @@ Percentile & Our Algorithm & DSA & Least Squares & Quad. Prog. & ssKL & ssFroben
  \end{singlespace}
  
 \startappendices
- \appendix{Code Appendix}
+\appendix{Code Appendix}
 
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Knitr Code (\url{Method.R})}]{Method.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Figure 1 (\url{Method/latin_R/chap4-fig1.R})}]{Method/latin_R/chap4-fig1.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Figure 2 (\url{Method/latin_R/chap4-fig2.R})}]{Method/latin_R/chap4-fig2.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Figure 3 (\url{Method/latin_R/chap4-fig3.R})}]{Method/latin_R/chap4-fig3.R}
-  \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Latin Square Preprocessing (\url{Method/latin_R/latin_data_read.R})}]{Method/latin_R/latin_data_read.R}
-  \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Latin Square Fitting Routine (\url{Method/latin_R/latin_data_plot.R})}]{Method/latin_R/latin_data_plot.R}
+\begin{center}
+Chapter \ref{chap:Method} Knitr Code (\href{https://github.com/gjhunt/prelim/blob/master/Method.R}{Method.R})
+\end{center}
+\input{append_code/Method.Rsource}
+
+\begin{center}
+  Chapter \ref{chap:Method} Figure 1 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig1.R}{Method/latin\_R/chap4-fig1.R})
+\end{center}
+\input{append_code/chap4-fig1.Rsource}
+
+\begin{center}
+ Chapter \ref{chap:Method} Figure 2 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig2.R}{Method/latin\_R/chap4-fig2.R})
+ \end{center}
+\input{append_code/chap4-fig2.Rsource}
+
+ \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Figure 3 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig3.R}{Method/latin\_R/chap4-fig3.R})}]{Method/latin_R/chap4-fig3.R}
+  \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Latin Square Preprocessing (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/latin_data_read.R}{Method/latin\_R/latin\_data\_read.R})}]{Method/latin_R/latin_data_read.R}
+  \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Latin Square Fitting Routine (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/latin_data_plot.R}{Method/latin\_R/latin\_data\_plot.R})}]{Method/latin_R/latin_data_plot.R}
 
     
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Knitr Code (\url{Analysis.R})}]{Analysis.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Analysis script (\url{Analysis/R/Analysis_script.R})}]{Analysis/R/Analysis_script.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Data Reading Script (\url{Analysis/R/read_data.R})}]{Analysis/R/read_data.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Helper Script (\url{Analysis/R/update.R})}]{Analysis/R/update.R}
+ \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Knitr Code (\href{https://github.com/gjhunt/prelim/blob/master/Analysis.R}{Analysis.R})}]{Analysis.R}
+ \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Analysis script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/Analysis_script.R}{Analysis/R/Analysis\_script.R})}]{Analysis/R/Analysis_script.R}
+\lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Data Reading Script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/read_data.R}{Analysis/R/read\_data.R})}]{Analysis/R/read_data.R}
+ \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Helper Script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/update.R}{Analysis/R/update.R})}]{Analysis/R/update.R}
 
 
 
