Updated code appendix.

--- a/prelim.tex
+++ b/prelim.tex
@@ -666,7 +666,7 @@ their methods
 \end{figure}
 
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Wed Nov 23 17:21:06 2016
+% Fri Nov 25 16:59:28 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllllll}
@@ -704,7 +704,7 @@ Percentile & Our Algorithm & DSA & Least Squares & Quad. Prog. & ssKL & ssFroben
 \end{figure}
 
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Wed Nov 23 17:21:07 2016
+% Fri Nov 25 16:59:29 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllllll}
@@ -744,32 +744,18 @@ Percentile & Our Algorithm & DSA & Least Squares & Quad. Prog. & ssKL & ssFroben
 \startappendices
 \appendix{Code Appendix}
 
-\begin{center}
-Chapter \ref{chap:Method} Knitr Code (\href{https://github.com/gjhunt/prelim/blob/master/Method.R}{Method.R})
-\end{center}
-\input{append_code/Method.Rsource}
-
-\begin{center}
-  Chapter \ref{chap:Method} Figure 1 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig1.R}{Method/latin\_R/chap4-fig1.R})
-\end{center}
-\input{append_code/chap4-fig1.Rsource}
-
-\begin{center}
- Chapter \ref{chap:Method} Figure 2 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig2.R}{Method/latin\_R/chap4-fig2.R})
- \end{center}
-\input{append_code/chap4-fig2.Rsource}
-
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Figure 3 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig3.R}{Method/latin\_R/chap4-fig3.R})}]{Method/latin_R/chap4-fig3.R}
-  \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Latin Square Preprocessing (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/latin_data_read.R}{Method/latin\_R/latin\_data\_read.R})}]{Method/latin_R/latin_data_read.R}
-  \lstinputlisting[language=R,caption={Chapter \ref{chap:Method} Latin Square Fitting Routine (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/latin_data_plot.R}{Method/latin\_R/latin\_data\_plot.R})}]{Method/latin_R/latin_data_plot.R}
-
-    
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Knitr Code (\href{https://github.com/gjhunt/prelim/blob/master/Analysis.R}{Analysis.R})}]{Analysis.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Analysis script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/Analysis_script.R}{Analysis/R/Analysis\_script.R})}]{Analysis/R/Analysis_script.R}
-\lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Data Reading Script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/read_data.R}{Analysis/R/read\_data.R})}]{Analysis/R/read_data.R}
- \lstinputlisting[language=R,caption={Chapter \ref{chap:Analysis} Helper Script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/update.R}{Analysis/R/update.R})}]{Analysis/R/update.R}
-
-
+\begin{tabular}{l}
+Chapter \ref{chap:Method} Knitr Code (\href{https://github.com/gjhunt/prelim/blob/master/Method.R}{Method.R})\\
+Chapter \ref{chap:Method} Figure 1 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig1.R}{Method/latin\_R/chap4-fig1.R})\\
+Chapter \ref{chap:Method} Figure 2 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig2.R}{Method/latin\_R/chap4-fig2.R})\\
+Chapter \ref{chap:Method} Figure 3 (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/chap4-fig3.R}{Method/latin\_R/chap4-fig3.R})\\
+Chapter \ref{chap:Method} Latin Square Preprocessing (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/latin_data_read.R}{Method/latin\_R/latin\_data\_read.R})\\
+Chapter \ref{chap:Method} Latin Square Fitting Routine (\href{https://github.com/gjhunt/prelim/blob/master/Method/latin_R/latin_data_plot.R}{Method/latin\_R/latin\_data\_plot.R})\\
+Chapter \ref{chap:Analysis} Knitr Code (\href{https://github.com/gjhunt/prelim/blob/master/Analysis.R}{Analysis.R})\\
+Chapter \ref{chap:Analysis} Analysis script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/Analysis_script.R}{Analysis/R/Analysis\_script.R})\\
+Chapter \ref{chap:Analysis} Data Reading Script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/read_data.R}{Analysis/R/read\_data.R})\\
+Chapter \ref{chap:Analysis} Helper Script (\href{https://github.com/gjhunt/prelim/blob/master/Analysis/R/update.R}{Analysis/R/update.R})
+\end{tabular}
 
 % An external Abstract that can be printed at the end of the document, 
 % for separate submission to Rackham. Comment it out when not needed. - jg
