Added Abstract and Analysis.

--- a/Abstract/Abstract.Rnw
+++ b/Abstract/Abstract.Rnw
@@ -1,1 +1,1 @@
-\lipsum[1]
+Gene profiling techniques such as DNA microarrays and RNA sequencing are important microbiological tools. However their analysis is often confounded by heterogenous samples. Practitioners will compare gene expressions among several samples. The difference in expressions across samples will be due in part to expression changes by individual cell types and in part due to differences in the types of cells comprising each sample. Thus the differences in sample composition counfounds the expression changes. In order to separate the effects of sample heterogenity from other biological factors methods of cell type deconvolution have been developed. Here we review the literature on such cell type deconvolution algorithms and propose a new deconvolution algorithm. Our algorithm eschews the prevailing modeling of expressions and instead directly models the interaction between quantity of RNA and expression measurements in a concise yet powerful new manner. Using real data we demonstrate that our algorithm has a competitive error with existing methods while simultaneously being simpler. 
