--- a/Conclusion/Conclusion.Rnw
+++ b/Conclusion/Conclusion.Rnw
@@ -1,6 +1,1 @@
-
-\lipsum[2]
-
-\section{Future Work}
-
-\lipsum[3]
+Cell type deconvolution is an important problem in the area of gene expression profiling because it helps us de-confound the effects of heterogeneity across cell samples. We have seen that while there is ample literature in this field most of the methods proposed up to this point have a very similar model at their core. In this paper we proposed a new model which diverges from those in the literature and showed how it can be leveraged to get estimates of mixing proportions of cell sub-types in a heterogeneous sample. While our method is substantially simpler than those existing in the literature it is able to predict the mixing proportions with similar accuracy. Furthermore, the simplicity of our algorithm gives us hope that there are straight-forward ways we can extend upon the method and improve its accuracy. One avenue of interest in the pre-processing normalization steps applied to data before it is deconvolved. Our method has very few pre-processing and normalization steps required. We would like to see if in place or normalization algorithms like RMA and MAS5 used in other algorithms we can employ a method like RUV \citet{Gagnon-Bartsch2012} to use negative-controls to remove unwanted variation from the microarray data. Removing unwanted variation would potentially prove useful in the linear models we use to estimate our slope $\gamma$ and choose the marker probes. Thus we are interested in pursuing lines of research in those directions. Finally we are interested finding a way to estimate the appropriate number of marker genes to use for deconvolution as well as look at ways to extend our method to account for unknown cell types. Our hope is to address these ideas in further research. 
