--- a/rac.sty
+++ b/rac.sty
@@ -78,7 +78,7 @@
   
   \vspace{.5in}
   
-  \today
+  December 9, 2016
 %   A dissertation proposal submitted in partial fulfillment \\
 %   of the requirements for the oral preliminary examination\\ 
 %   for the degree of \\
